--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,15 @@
   		<artifactId>dkpro-core-io-conll-asl</artifactId>
   		<version>2.1.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.dkpro.core</groupId>
+  		<artifactId>dkpro-core-api-lexmorph-asl</artifactId>
+  		<version>2.1.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.dkpro.core</groupId>
+  		<artifactId>dkpro-core-api-ner-asl</artifactId>
+  		<version>2.1.0</version>
+  	</dependency>
   </dependencies>
 </project>
